--- a/package.json
+++ b/package.json
@@ -11,19 +11,34 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.1",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^10.0.3",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
