--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.6.1",
