--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.11.4",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
