--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-av": "^13.6.0",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "lottie-ios": "^3.4.0",
